tests/snapshots/test_edit__rfc_remove_owner.snap
---
source: tests/edit_tests/rfc.rs
expression: value
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc edit RFC-0001 owners --add @owner1
Added '@owner1' to RFC-0001.owners
exit: 0

$ govctl rfc edit RFC-0001 owners --add @owner2
Added '@owner2' to RFC-0001.owners
exit: 0

$ govctl rfc edit RFC-0001 owners --remove @owner1
Removed '@owner1' from RFC-0001.owners
exit: 0

$ govctl rfc get RFC-0001 owners
@test-user, @owner2
exit: 0
