tests/snapshots/test_edit__rfc_set_nonexistent_field.snap
---
source: tests/edit_tests/rfc.rs
expression: value
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc edit RFC-0001 nonexistent --set value
error[E0101]: Unknown field: nonexistent. Known fields: changelog, created, owners, phase, refs, status, supersedes, tags, title, updated, version ()
exit: 1
