tests/snapshots/test_edit__rfc_set_title.snap
---
source: tests/edit_tests/rfc.rs
expression: value
---
$ govctl rfc new Original Title
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl rfc edit RFC-0001 title --set New Title
Set RFC-0001.title = New Title
exit: 0

$ govctl rfc list
[
  {
    "id": "RFC-0001",
    "version": "0.1.0",
    "status": "draft",
    "phase": "spec",
    "title": "New Title"
  }
]
exit: 0
