tests/snapshots/test_edit__tick_rejects_nested_path.snap
---
source: tests/edit_tests/path_cases/tick.rs
expression: value
---
$ govctl work new Nested Tick
Created work item: gov/work/<DATE>-nested-tick.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add add: Criterion 1
Added 'add: Criterion 1' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria[0].text --tick done
error[E0801]: Tick requires an indexed checklist path such as acceptance_criteria[0] (WI-<DATE>-001)
exit: 1
