tests/snapshots/test_edit__work_add_journal.snap
---
source: tests/test_edit.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work add WI-<DATE>-001 journal First progress update
Added 'First progress update' to WI-<DATE>-001.journal
exit: 0

$ govctl work add WI-<DATE>-001 journal Second progress update
Added 'Second progress update' to WI-<DATE>-001.journal
exit: 0

$ govctl work show WI-<DATE>-001
<!-- GENERATED: do not edit. Source: WI-<DATE>-001 -->
<!-- SIGNATURE: sha256:<HASH> -->

# Test Task

> **ID:** WI-<DATE>-001 | **Status:** queue

## Description

Describe the work to be done.
What is the goal? What are the acceptance criteria?

## Journal

### <DATE>

First progress update

### <DATE>

Second progress update
exit: 0
