tests/snapshots/test_edit__work_add_ref.snap
---
source: tests/edit_tests/work_tests/references.rs
expression: value
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 refs --add RFC-0001
Added 'RFC-0001' to WI-<DATE>-001.refs
exit: 0

$ govctl work get WI-<DATE>-001 refs
RFC-0001
exit: 0
