tests/snapshots/test_edit__work_get_field.snap
---
source: tests/test_edit.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work get WI-<DATE>-001 title
Test Task
exit: 0

$ govctl work get WI-<DATE>-001 status
queue
exit: 0
