tests/snapshots/test_edit__work_get_nested_scalar_rejects_index.snap
---
source: tests/test_edit.rs
assertion_line: 854
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new Work Scalar Index Test
Created work item: gov/work/<DATE>-work-scalar-index-test.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work add WI-<DATE>-001 journal Did something
Added 'Did something' to WI-<DATE>-001.journal
exit: 0

$ govctl work get WI-<DATE>-001 journal[0].content[0]
error[E0817]: Cannot index into scalar field 'content' (WI-<DATE>-001)
exit: 1
