tests/snapshots/test_edit__work_get_nonexistent.snap
---
source: tests/test_edit.rs
assertion_line: 987
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work get WI-9999-99-999 title
error[E0402]: Work item not found: WI-9999-99-999 (gov/work)
exit: 1
